Driver is reassigned from source VSE strip to its copy after duplicating #104141

Closed
opened 2023-01-25 21:27:48 +01:00 by Serge Lyatin · 6 comments

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 3.4.1

Short description of error
If you are duplicating a strip with driver, then driver is automatically transferred from source to a copy. This means original strip loses driver.
Actually, I was hoping to get a copy of a driver too (like with scene objects), but at least it shouldn't go away from the source.

Exact steps for others to reproduce the error
In attached file duplicate Color strip -> driver is reassigned to Color.001
vse_driver_copy.blend

**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 3.4.1 **Short description of error** If you are duplicating a strip with driver, then driver is automatically transferred from source to a copy. This means original strip loses driver. Actually, I was hoping to get a copy of a driver too (like with scene objects), but at least it shouldn't go away from the source. **Exact steps for others to reproduce the error** In attached file duplicate Color strip -> driver is reassigned to Color.001 [vse_driver_copy.blend](https://archive.blender.org/developer/F14198428/vse_driver_copy.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

There may be duplicate report for this, but AFAIK, this is currently expected behavior, drivers are not handled at all in sequencer when copying strips. Also duplication is implemented in rather hacky way. Copy/pasting strips may prevent this behavior.

I think this could be relatively simple to resolve for copy/pasting strips, rewriting duplication may be bit more tricky, but it would benefit from using copy pasting API.

There may be duplicate report for this, but AFAIK, this is currently expected behavior, drivers are not handled at all in sequencer when copying strips. Also duplication is implemented in rather hacky way. Copy/pasting strips may prevent this behavior. I think this could be relatively simple to resolve for copy/pasting strips, rewriting duplication may be bit more tricky, but it would benefit from using copy pasting API.

This issue was referenced by 4e9c6929c1

This issue was referenced by 4e9c6929c1d08e41702ac4341d08bf15d7de31b3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2023-01-28 03:36:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104141
No description provided.